<resources>
    <string name="app_name">FeedbackSave</string>
    <string name="schoolyears">Schoolyears</string>
    <string name="subjects">Subjects</string>
    <string name="or_make_a_new_account">Don\'t have an account? Click here to make one</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="add_year">Add Year</string>
    <string name="add_subject">Add Subject</string>
    <string name="feedback_name">Feedback Name</string>
    <string name="add_tags">Add Tags</string>
    <string name="feedback_type">Feedback Type:</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="add">Add</string>
    <string name="write_note_here">Write Note Here</string>
    <string name="constructive">Constructive</string>
    <string name="compliment">Compliment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="yourmailadress_mail_com">yourmailadress@mail.com</string>
    <string name="fill_in_all_fields">Fill in all fields!</string>
    <string name="passwords_match">Your passwords don\'t match</string>
    <string name="already_have_an_account">Already have an account? Click here to log in</string>
    <string name="logout">Logout</string>
    <string name="subject_name">Subject Name</string>
    <string name="empty_name_error">Fill in a subject name</string>
    <string name="unique_name_error">Choose a unique subject name</string>
    <string name="make_subject">Make new subject</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="choose_change_subject">What do you want to do with this subject?</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="create_new_name">Create new name</string>
    <string name="add_photo_from_gallery">Add Photo From Gallery</string>
    <string name="make_photo">Make Photo</string>
    <string name="edit_feedback">Edit Feedback</string>
    <string name="choose_change_feedback">What do you want to do with this feedback?</string>
    <string name="back">Back</string>
    <string name="loading_account">Loading your account..</string>
    <string name="delete_year">Delete year</string>
    <string name="delete_warning">Are you sure you want to delete this year and its contents?</string>
    <string name="item_is_deleted">item is deleted</string>
    <string name="permission">Permission necessary</string>
    <string name="uploading_image">Uploading image to Dropbox..</string>
</resources>
