<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caitlin.feedbacksave.LoginActivity">

    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/yourmailadress_mail_com"
        android:id="@+id/etEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/etRPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:id="@+id/etRPasswordControl" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tvError"
        android:layout_marginBottom="80dp"
        android:text=""
        android:textSize="18dp"
        android:textAlignment="center"
        android:visibility="invisible"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:layout_gravity="center_horizontal"
        android:onClick="registerClick"/>
</LinearLayout>

