<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caitlin.feedbacksave.LoginActivity">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/add_tags"
                android:id="@+id/etTagsNote"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/add"
                android:id="@+id/addTagNoteBtn"
                android:onClick="addTagClick"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginBottom="40dp"
            android:hint="@string/feedback_name"
            android:id="@+id/etFBName"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/etNoteBox"
            android:autoLink="all"
            android:hint="@string/write_note_here"
            android:gravity="top|left"
            android:maxLines="10"
            android:scrollbars="none"
            android:inputType="textMultiLine|textCapSentences"
            android:imeOptions="actionDone"
            android:singleLine="false"/>

        <Button
            android:layout_marginTop="120dp"
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:layout_height="70dp"
            android:text="@string/add_feedback"
            android:id="@+id/addBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="addNoteClick"/>

    </LinearLayout>
</ScrollView>
